--- a/1.html
+++ b/1.html
@@ -5,8 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <script>
+        function abc(){
+            alert("test");
+        }
+    </script>
 </head>
 <body>
-    <input type="button" value="전송">
+    <input type="button" value="전송" onclick="abc()">
 </body>
 </html>
